public.api/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: public-api
  # namespace: public-stage

spec:
  replicas: 0 # se define en el overlay.

  #selector:
  #  matchLabels:
  #    app: public-api
  template:
    metadata:
      name: public-api
      #labels:
      #  app: public-api
    spec:
      #imagePullSecrets:
      # - name: regcred
      containers:
      - name: public-api
        image: KUSTOMIZE-DEFINED
        # imagePullPolicy: Always

        ports:
        - containerPort: 3000
          name: public-api
        resources:
          limits:
            cpu: 20m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 50Mi
